--- a/main.css
+++ b/main.css
@@ -1,7 +1,13 @@
-body {
-  font-family: 'Roboto', sans-serif;
+*{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
 }
 
 header {
@@ -78,4 +84,20 @@ button[type="reset"] {
   font-size: 16px;
   padding: 10px 20px;
   margin-right: 10px;
+}
+
+ul{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+ul li {
+  max-width: 25%;
+  position: relative;
+  max-height: 280px;
+  overflow-y: hidden;
+}
+
+ul li img{
+  width: 100%;
 }
